--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ b<!DOCTYPE html>
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>Will You be mine chitraaa....?  🥹❤️</h1>
+      <h1>Will You be mine ....?  🥹❤️</h1>
       <p>Lorem ipsum dolor sit amet.</p>
 
       <div class="btn">
