--- a/yes.html
+++ b/yes.html
@@ -26,7 +26,7 @@
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>Hehehehe love you chitraaa 🥹, I knew it thank you  😚❤️! </h1>
+      <h1>Hehehehe love you 🥹, I knew it thank you  😚❤️! </h1>
     </div>
   </body>
 </html>
