--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ b<!DOCTYPE html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>arslaan</title></title>
+    <title>Bhoomika</title>
 
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -25,7 +25,7 @@ b<!DOCTYPE html>
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>Will You be mine ....?  🥹❤️</h1>
+      <h1>Sorry na yrrr maan jao ....?  🥹❤️</h1>
       <p>Lorem ipsum dolor sit amet.</p>
 
       <div class="btn">
