--- a/yes.html
+++ b/yes.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>yessss</title>
+    <title>hritika</title>
 
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -26,7 +26,7 @@
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>Hehehehe love you 🥹, I knew it thank you  😚❤️! </h1>
+      <h1>Hehehehe love you 🥹, I knew it thank you hritika  😚❤️! </h1>
     </div>
   </body>
 </html>
