--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ b<!DOCTYPE html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>yessss</title>
+   <title>Hritika</title>
 
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -17,7 +17,7 @@ b<!DOCTYPE html>
         data-width="100%"
       >
         <a href="https://tenor.com/view/manja-gif-22885016">Manja Sticker</a
-        >from
+        >
         <a href="https://tenor.com/search/manja-stickers">Manja Stickers</a>
       </div>
       <script
@@ -25,7 +25,7 @@ b<!DOCTYPE html>
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>Sorry na yrrr maan jao ....?  🥹❤️</h1>
+      <h1>Hritika will you be mine bestfriend 🤧💗🫣...?  🥹❤️</h1>
       <p> </p>
 
       <div class="btn">
