--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ b<!DOCTYPE html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <title>Muskan</title>
+   <title>Rashii</title>
 
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -25,7 +25,7 @@ b<!DOCTYPE html>
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>ummmm will you be mine bestfriend 🤧💗🫣...?  🥹❤️</h1>
+      <h1>ummmm will you be mine bestfriend Rashii 🤧💗🫣...?  🥹❤️</h1>
       <p> </p>
 
       <div class="btn">
