--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ b<!DOCTYPE html>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Rashii</title>
-
+<meta property="og:image"content="https://ik.imagekit.io/Sayyedarslaan4712/8dd3ed839851364b5653440ee4a6a5a9.gif?updatedAt=1741887318779" />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
