--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ b<!DOCTYPE html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <title>Rashii</title>
+   <title>Muskan</title>
 <meta property="og:image"content="https://ik.imagekit.io/Sayyedarslaan4712/8dd3ed839851364b5653440ee4a6a5a9.gif?updatedAt=1741887318779" />
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -25,7 +25,7 @@ b<!DOCTYPE html>
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>ummmm will you be mine bestfriend Rashii 🤧💗🫣...?  🥹❤️</h1>
+      <h1>ummmm will you be mine bestfriend Madam 🤧💗🫣...?  🥹❤️</h1>
       <p> </p>
 
       <div class="btn">
