--- a/no1.html
+++ b/no1.html
@@ -16,9 +16,10 @@
         data-aspect-ratio="1"
         data-width="100%"
       >
+<!--         //--https://tenor.com/search/mochi-stickers--//  change from line 22 -->
         <a href="https://tenor.com/view/mochi-gif-22050818">Mochi Sticker</a
         >from
-        <a href="https://tenor.com/search/mochi-stickers">Mochi Stickers</a>
+        <a href="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExMm40dXQyY3p5NmN4cHM0bDhka3U5aDA5MzRjNW1hdm82cGMyZ3htcCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ghhynvHS4NbDG/giphy.gif">Mochi Stickers</a>    
       </div>
       <script
         type="text/javascript"
