--- a/no1.html
+++ b/no1.html
@@ -25,11 +25,11 @@
       <script
         type="text/javascript"
         async
-        src="https://tenor.com/embed.js"
+        
       ></script>
       <h1>Soch lijiye ache se!.... 🥺💘</h1>
       <p> </p>
-
+<!--  src="https://tenor.com/embed.js"  28 -->
       <div class="btn">
         <a href="yes.html">Yes</a>
         <a href="no2.html">No</a>
