--- a/yes.html
+++ b/yes.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Priti</title>
+    <title>Chomuuu</title>
 
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -19,14 +19,14 @@
         <a
           href=""
           ></a
-        >from <a </a>
+        >from  </a>
       </div>
       <script
         type="text/javascript"
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>Hehehehe Thank you Shalini🥹, I knew it thank you babeee 😚❤️! </h1>
+      <h1>Hehehehe Thank you chomu🥹, I knew it thank you babeee 😚❤️! </h1>
     </div>
   </body>
 </html>
